--- a/munkaim.html
+++ b/munkaim.html
@@ -27,8 +27,8 @@
 <img class="A4" src="Képek/szeleporsó.jpg">
 <img class="A4" src="Képek/szelepfedél.jpg">
 <img class="A4"src="Képek/tömszelence.jpg">
-<img class="A4"src="Képek/tömszelence.jpg">
-<img class="A4"src="Képek/tömszelence.jpg">
+<img class="A4"src="Képek/kézikerék.jpg">
+<img class="A4"src="Képek/szelepház.jpg">
 <img class="A3"src="Képek/összeállítás.jpg">
 <footer>
 	<h3>
