--- a/hogyan.html
+++ b/hogyan.html
@@ -25,13 +25,17 @@
 <img class="A3 Terv" src="Képek/terv.jpg">
 <div>
 	<h4>
-		<p>A képen látható az oldal eredeti terve. Ehhez képest változás a lábléc hiánya: nem sikerült megfelelően pozícionálnom, és mivel semmi plusz információt nem tartalmazott volna, inkább kihagytam.</p>
-		<p> További változás, hogy a nyitóoldalon eredetileg a kép baloldalt lett volna, a "munkáim"-hoz pedig kevesebb képet terveztem. A legnagyobb nehézséget ezen képek elhelyezése okozta a feladat során.</p>
 		<p>
-			Felhasznált weboldalak: <a class="link" href="https://www.youtube.com/watch?v=URx3juKDI5U&list=PLYiFuPu36je2kcaSlieHrYWYXvmZtW2Ws">https://www.youtube.com/watch?v=URx3juKDI5U&list=PLYiFuPu36je2kcaSlieHrYWYXvmZtW2Ws</a>
+		A képen látható az oldal eredeti terve. Ehhez képest változás a lábléc hiánya: nem sikerült megfelelően pozícionálnom, és mivel semmi plusz információt nem tartalmazott volna, inkább kihagytam.
+	    </p>
+		<p> További változás, hogy a nyitóoldalon eredetileg a kép baloldalt lett volna, a "munkáim"-hoz pedig kevesebb képet terveztem. A legnagyobb nehézséget ezen képek elhelyezése okozta a feladat során.
+		</p>
+		<p>
+			Felhasznált weboldalak: <a class="link" href="https://www.youtube.com/watch?v=URx3juKDI5U&list=PLYiFuPu36je2kcaSlieHrYWYXvmZtW2Ws">https://www.youtube.com/watch?v=URx3juKDI5U&list=
+			PLYiFuPu36je2kcaSlieHrYWYXvmZtW2Ws</a>
 			<a class="link" href="https://www.w3schools.com/html/html_css.asp">https://www.w3schools.com/html/html_css.asp</a>
 		</p>
-	</h4>>
+	</h4>
 </div>
 </body>
 </html>
